--- a/client/src/containers/header/header.css
+++ b/client/src/containers/header/header.css
@@ -14,6 +14,7 @@
 }
 
 .headerContent h1 {
+    padding-bottom: 0.25rem;
     font-family: var(--fontFamily);
     font-weight: 800;
     font-size: 62px;
@@ -28,6 +29,8 @@
     line-height: 27px;
     letter-spacing: -0.04em;
     color: var(--colorText);
+
+    margin-top: 1.5rem;
 }
 
 .headerContentInput {
@@ -71,4 +74,96 @@
 
     background: #FF4820;
     cursor: pointer;
+}
+
+.headerContentPeople {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    margin-top: 2rem;
+}
+
+.headerContentPeople img {
+    width: 182;
+    width: 39;
+}
+
+.headerContentPeople p {
+    margin: 0 0 0 1rem;
+
+    font-family: var(--fontFamily);
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 38px;
+    color: #fff;
+
+    text-align: center;
+}
+
+.headerImage {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerImage img {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1050px) {
+    .header {
+        flex-direction: column;
+    }
+
+    .headerContent {
+        margin: 0 0 3rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .header h1 {
+        font-size: 48px;
+        line-height: 60px;
+    }
+
+    .header p {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .headerContentPeople {
+        flex-direction: column;
+    }
+
+    .headerContentPeople p {
+        margin: 0;
+    }
+
+    .headerContentInput input,
+    .headerContentInput button {
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .header h1 {
+        font-size: 26px;
+        line-height: 28px;
+    }
+
+    .header p {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .headerContentInput input,
+    .headerContentInput button {
+        font-size: 12px;
+        line-height: 16px;
+    }
 }
