--- a/client/src/containers/header/header.css
+++ b/client/src/containers/header/header.css
@@ -111,7 +111,15 @@
 
 .headerImage img {
     width: 100%;
-    height: 100%;
+    height: auto;
+    align-items: center;
+}
+
+
+@media screen and (max-width: 1300px) {
+    .headerContent {
+        margin-right: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 1050px) {
