--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,10 @@
 /* This creates global variables for use in other components use the React root component */ 
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 
 :root {
-  --fontFamily: 'Manrope', sans-serif;
+  --fontFamily: 'Titillium+Web', sans-serif;
 
   --gradientText: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
   --gradientBar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
