--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,3 +1,8 @@
+.scaleUpCenter {
+	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}/* CREATE WORKING ANIMATION!!!!!!!!!!!!!!!! */
+
 .navBar {
     display: flex;
     justify-content: space-between;
