--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
   
   --colorBG: #040C18;
   --colorFooter : #031B34;
-  --colorBlog: #042c54;
+  --colorAbout: #042c54;
   --colorText: #81AFDD;
   --colorSubtext: #FF8A71;
 }
