--- a/client/src/components/about/about.css
+++ b/client/src/components/about/about.css
@@ -1,7 +1,8 @@
 .about{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: row;
+    justify-content: space-between;
 
     font-family: var(--fontFamily);
 }
@@ -14,7 +15,7 @@
 .aboutTitle h1 {
     padding: 0.25rem;
     font-size: 32px;
-    font-weight: 600;
+    font-weight: 700;
     color: #fff;
 }
 
