--- a/client/src/components/about/about.css
+++ b/client/src/components/about/about.css
@@ -1,4 +1,5 @@
 .about{
+    width: 100%;
     display: flex;
     align-items: flex-start;
     flex-direction: row;
@@ -14,7 +15,8 @@
 
 .aboutTitle h1 {
     padding: 0.25rem;
-    font-size: 32px;
+    font-size: 28px;
+    line-height: 40px;
     font-weight: 700;
     color: #fff;
 }
@@ -23,6 +25,8 @@
     width: 38px;
     height: 3px;
     background: var(--gradientBar);
+
+    margin-bottom: 0.5rem;
 }
 
 .aboutText{
@@ -31,8 +35,10 @@
 }
 
 .aboutText p {
+    padding-right: 1rem;
+
     font-size: 14px;
     font-weight: 300;
-    line-height: 24px;
+    line-height: 28px;
     color: var(--colorText);
 }
