--- a/client/src/components/about/about.css
+++ b/client/src/components/about/about.css
@@ -4,6 +4,7 @@
     align-items: flex-start;
     flex-direction: row;
     justify-content: space-between;
+    padding-bottom: 2rem;
 
     font-family: var(--fontFamily);
 }
