Changed button color to a variable

--- a/client/src/containers/header/header.css
+++ b/client/src/containers/header/header.css
@@ -72,7 +72,7 @@
     line-height: 27px;
     color: #fff;
 
-    background: #FF4820;
+    background: var(--colorButton);
     cursor: pointer;
 }
 
