--- a/client/src/containers/footer/footer.css
+++ b/client/src/containers/footer/footer.css
@@ -12,7 +12,14 @@
     justify-content: center;
 }
 
-.footerContent div {
+.footerContentContainer1,
+.footerContentContainer2 {
+    display: flex;
+    flex-direction: row;
+}
+
+.footerContentContainer1 div,
+.footerContentContainer2 div {
     padding: 3rem;
     display: flex;
     flex-direction: column;
@@ -37,7 +44,7 @@
 
 .footerContent a {
     padding: 0.75rem 0;
-    font-size: 14px;
+    font-size: 12px;
     /* color: var(--colorText); */
 }
 
@@ -52,7 +59,7 @@
 .footerContentBackToTop a {
     width: 40px;
     border-radius: 30px;
-    border-width: 1px;
+    border-width: 0px;
     background: var(--colorButton);
 
     display: flex;
@@ -63,4 +70,26 @@
     display: flex;
     justify-content: center;
     padding: 3rem;
+    color: #fff;
+    font-family: var(--fontFamily);
+}
+
+@media screen and (max-width: 860px) {
+    .footerContentContainer1, .footerContentContainer2 {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .footerContent {
+        flex-direction: column;
+    }
+    .footerContentContainer1 div,
+    .footerContentContainer2 div {
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
