--- a/client/src/containers/footer/footer.css
+++ b/client/src/containers/footer/footer.css
@@ -72,6 +72,7 @@
     padding: 3rem;
     color: #fff;
     font-family: var(--fontFamily);
+    font-size: 14px;
 }
 
 @media screen and (max-width: 860px) {
