--- a/client/src/components/project/project.css
+++ b/client/src/components/project/project.css
@@ -1,4 +1,53 @@
 .project {
     color: white;
     display: flex;
+    flex-direction: column;
+    margin: 2rem 0;
+    
+    background-color: var(--colorAbout);
+    font-family: var(--fontFamily);
+    padding: 2rem 0;
+}
+
+.left {
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-right: 15%;
+    padding-left: 15%;
+    padding-right: 5%;
+
+    border-radius: 0 3rem 3rem 0;
+}
+
+.right {
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-left: 15%;
+    padding-right: 15%;
+    padding-left: 5%;
+
+    border-radius: 3rem 0 0 3rem;
+}
+
+.projectTitle {
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 44px;
+    padding: 1rem;
+}
+
+.projectImage {
+    padding: 2% 10%;
+}
+
+.projectImage img {
+    max-width: 100%;
+    height: auto;
+}
+
+.projectText {
+    color: var(--colorText);
+
+    font-size: 24px;
+    line-height: 36px;
 }
