--- a/client/src/containers/projects/projects.css
+++ b/client/src/containers/projects/projects.css
@@ -12,9 +12,10 @@
 }
 
 .projectsTitle p {
+    margin: 0 20%;
     font-family: var(--fontFamily);
     font-size: 56px;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 70px;
 }
 
@@ -62,7 +63,6 @@
 
     .projectsContent .projectTitle {
         font-size: 34px;
-        
     }
 
     .projectsContent .projectText {
