--- a/client/src/components/signUp/signUp.css
+++ b/client/src/components/signUp/signUp.css
@@ -4,3 +4,17 @@
     display: flex;
     flex-direction: column;
 }
+
+.signUpTitle {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.signUpFormSubmit {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
