--- a/client/src/containers/projects/projects.css
+++ b/client/src/containers/projects/projects.css
@@ -6,13 +6,12 @@
 .projectsTitle {
     background: rgb(3,22,46);
     background: linear-gradient(90deg, rgba(3,22,46,1) 0%, rgba(0,40,83,1) 50%, rgba(3,22,46,1) 100%);
-    padding: 2rem;
+    padding: 2rem 0;
     text-align: center;
     margin-bottom: 4rem;
 }
 
 .projectsTitle p {
-    margin: 0 20%;
     font-family: var(--fontFamily);
     font-size: 56px;
     font-weight: 600;
