--- a/client/src/components/project/project.css
+++ b/client/src/components/project/project.css
@@ -1,54 +1,45 @@
 .project {
+    width: 100%;
+    height: 100%;
+
     color: white;
     display: flex;
     flex-direction: column;
-    margin: 2rem 0 4rem;
+    justify-content: space-between;
     
-    background-color: var(--colorAbout);
+    background-color: var(--colorFooter);
     font-family: var(--fontFamily);
-    padding: 2rem 0;
 }
 
-.left {
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-self: flex-start;
-    margin-right: 2.5%;
-    padding-left: 10%;
-    padding-right: 5%;
-
-    border-radius: 0 3rem 3rem 0;
+.projectImage {
+    background-color: transparent !important;
+    outline: none;
+    border: none;
 }
 
-.right {
-    justify-content: flex-end;
-    align-items: flex-start;
-    align-self: flex-start;
-    margin-left: 2.5%;
-    padding-right: 10%;
-    padding-left: 5%;
-
-    border-radius: 3rem 0 0 3rem;
+.projectImage img {
+    max-width: 100%;
+    height: 100%;
 }
 
-.leftBackground {
-    background: rgb(4,12,24);
-    background: linear-gradient(90deg, rgba(4,12,24,1) 0%, rgba(3,22,46,1) 20%, rgba(0,40,83,1) 96%);
-}
+.projectContent {
+    padding: 1rem 4rem 2rem;
 
-.rightBackground {
-    background: rgb(0,40,83);
-    background: linear-gradient(90deg, rgba(0,40,83,1) 0%, rgba(3,22,46,1) 76%, rgba(4,12,24,1) 96%);
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-start; */
 }
 
 .projectTitle {
     display: flex;
     flex-direction: column;
+}
 
+.projectTitle .title {
     font-size: 40px;
     font-weight: 600;
     line-height: 48px;
-    padding: 1rem;
+    padding: 1.5rem 1rem;
 }
 
 .projectTitle div {
@@ -58,13 +49,8 @@
     margin-bottom: 0.5rem;
 }
 
-.projectImage {
-    padding: 2% 10%;
-}
-
-.projectImage img {
-    max-width: 100%;
-    height: auto;
+.projectUpdatedDate {
+    font-size: 0.85rem;
 }
 
 .projectText {
@@ -73,11 +59,27 @@
     font-size: 24px;
     line-height: 36px;
 
-    padding: 1rem 0 2rem;
+    padding: 1rem 0;
 }
 
-@media screen and (max-width: 650px){
-    .projectImage {
-        padding: 1rem 0;
+.projectButton {
+    width: fit-content;
+    padding: 0.6rem 1rem;
+    color: #fff;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+
+    background: var(--colorButton);
+    border-radius: 5px;
+    font-weight: 500;
+    
+    margin: 0 4rem 3rem;
+}
+
+@media screen and (max-width: 1080px){
+    .projectContent {
+        padding: 0.5rem 2rem 1rem;
     }
 }
