--- a/client/src/components/popup/popup.css
+++ b/client/src/components/popup/popup.css
@@ -1,92 +1,33 @@
-/* dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0);
-    backdrop-filter: blur(8px);
-    opacity: 0.75;
-    height: 100vh;
-} */
-
 .dialog::backdrop {
-    background: darkorange;
-    background-image: linear-gradient(
-      130deg,#ff7a18,
-      #af002d 41.07%,
-      #319197 76.05%
-    );
+    position: fixed;
+    inset: 0px;
+    background: hsl(0 0% 0% / 50%);
+    backdrop-filter: blur(2px);
   }
 
 .dialog {
     background-color: var(--colorPopUp);
     min-width: 300px;
     border: none;
-    /* Drop shadow */
-
-    position: fixed;
-    top: 30%;
-    /* left: 50%;
-    transform: translate(-50%, -50%); */
+    padding: 0;
 }
-
-.modal {
-    max-width: 20rem;
-    padding: 2rem;
-    border: 0;
-    border-radius: 0.5rem;
-    position: relative;
-    box-shadow: hsl(0 0% 0% / 10%) 0 0 0.5rem 0.25rem;
-  }
-  
-  .modal::backdrop {
-    background: hsl(0 0% 0% / 50%);
-  }
-  
-  .modal-close-btn {
-    font-size: 0.75em;
-    position: absolute;
-    top: 0.25em;
-    right: 0.25em;
-  }
-
-.dialog-overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
-}
-
-
-/* .popup-overlay {
-    background-color: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(8px);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 .popup-container {
     display: flex;
     flex-direction: column;
-    /* position: absolute; */
+    position: relative;
+    padding: 1rem;
 }
 
 .popup-content {
-    padding: 1rem 2rem 2rem;
+    padding: 2rem;
 }
 
 .popup-close {
     cursor: pointer;
-    position: relative;
-    top: 0;
-    right: 0;
-
-    /* margin: 0.75rem 0.75rem 0 0; */
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
 }
 
 /* Pop Up Content */
@@ -148,12 +89,6 @@
     font-size: 16px;
     font-weight: 500;
     color: #fff;
-}
-
-@media screen and (max-width:650px) {
-    .popup-content {
-        padding: 0rem 3rem 3rem;
-    }
 }
 
 @media screen and (max-width:550px) {
