--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,22 +1,31 @@
 /* This creates global variables for use in other components use the React root component */ 
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 @tailwind base;
 @tailwind component;
 @tailwind utilities;
 
 :root {
-  --fontFamily: 'Titillium+Web', sans-serif;
+  --fontFamily: 'Poppins', sans-serif;
 
   --gradientText: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
   --gradientBar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
   
-  --colorBG: #040C18;
+/* Colors */
+
+  --primary: #1283FF;
+  --secondary: #696969;
+  --accent: #2D6BFB;
+  --text: #E3E3E3;
+
+/* Elements */
+  --colorBG: rgb(2 6 23);
   --colorFooter : #031B34;
   --colorAbout: #042c54;
-  --colorText: #81AFDD;
+  --colorText: var(--text);
   --colorSubtext: #FF8A71;
-  --colorButton: #FF4820;
+  --colorButton: var(--primary);
   --colorPopUp: #043a70;
 }
