--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,14 @@ h1 {
     font-family: 'Rubik';
 }
 
+.gradient-background {
+    background: rgb(18,131,255);
+    background: radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
+    background: -webkit-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -webkit-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
+    background: -o-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -o-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
+    background: -ms-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -ms-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
+    background: -moz-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -moz-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
+}
 
 a {
     color: unset;
