--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@
   --text: #E3E3E3;
 
 /* Elements */
-  --colorBG: rgb(2 6 23);
+  --colorBG: #020617;
   --colorFooter : #031B34;
   --colorAbout: #042c54;
   --colorText: var(--text);
