--- a/client/src/components/project/project.css
+++ b/client/src/components/project/project.css
@@ -1,85 +1,3 @@
-.project {
-    width: 100%;
-    height: 100%;
-
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-    background-color: var(--colorFooter);
-    font-family: var(--fontFamily);
-}
-
-.projectImage {
-    background-color: transparent !important;
-    outline: none;
-    border: none;
-}
-
-.projectImage img {
-    max-width: 100%;
-    height: 100%;
-}
-
-.projectContent {
-    padding: 1rem 4rem 2rem;
-
-    /* display: flex;
-    flex-direction: column;
-    justify-content: flex-start; */
-}
-
-.projectTitle {
-    display: flex;
-    flex-direction: column;
-}
-
-.projectTitle .title {
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 48px;
-    padding: 1.5rem 1rem;
-}
-
-.projectTitle div {
-    width: 50px;
-    height: 5px;
-    background: var(--gradientBar);
-    margin-bottom: 0.5rem;
-}
-
-.projectUpdatedDate {
-    font-size: 0.85rem;
-}
-
-.projectText {
-    color: var(--colorText);
-
-    font-size: 24px;
-    line-height: 36px;
-
-    padding: 1rem 0;
-}
-
-.projectButton {
-    width: fit-content;
-    padding: 0.6rem 1rem;
-    color: #fff;
-    font-size: 14px;
-    border: none;
-    cursor: pointer;
-    outline: none;
-
-    background: var(--colorButton);
-    border-radius: 5px;
-    font-weight: 500;
-    
-    margin: 0 4rem 3rem;
-}
-
-@media screen and (max-width: 1080px){
-    .projectContent {
-        padding: 0.5rem 2rem 1rem;
-    }
+.project-code:hover {
+    filter: drop-shadow(0 0 20px rgba(255, 255, 255, 0.5));
 }
