--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,8 +20,8 @@ h1 {
     background: radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
     background: -webkit-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -webkit-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
     background: -o-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -o-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
-    background: -ms-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -ms-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
-    background: -moz-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -moz-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
+a {
+    @apply text-primary-500 font-semibold;
 }
 
 a {
@@ -51,14 +51,6 @@ a {
     -webkit-text-fill-color: transparent;
 }
 
-.sectionPadding {
-    padding: 4rem 6rem;
-}
-
-.sectionMargin {
-    margin: 4rem 6rem;
-}
-
 .scaleOnHover {
     transition: transform .2s;
 }
@@ -73,24 +65,4 @@ a {
 }
 .scale-up-center:hover {
     transform: scale(1.1);
-}
-
-@media screen and (max-width:700px) {
-    .sectionPadding {
-        padding: 4rem;
-    }
-
-    .sectionMargin {
-        margin: 4rem;
-    }
-}
-
-@media screen and (max-width:550px) {
-    .sectionPadding {
-        padding: 4rem 2rem;
-    }
-
-    .sectionMargin {
-        margin: 4rem 2rem;
-    }
 }
