--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,21 +11,17 @@ body {
     color: var(--colorText);
 }
 
-h1 {
-    font-family: 'Rubik';
+h1, h2, .title-font {
+    font-family: "Fugaz One";
+    /* font-family: "Mogra"; */
+    /* font-family: "Rubik Spray Paint"; */
+    /* font-family: "Slackey"; */
+    /* font-family: "Zen Dots"; */
+    /* font-family: "Black Ops One"; */
 }
 
-.gradient-background {
-    background: rgb(18,131,255);
-    background: radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
-    background: -webkit-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -webkit-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
-    background: -o-radial-gradient(circle at 100vw 0vh, rgba(18,131,255,0.4) 0vw, transparent 40vw), -o-radial-gradient(circle at 0vw 100vh, rgba(18,131,255,0.2) 0vw, transparent 30vw);
 a {
     @apply text-primary-500 font-semibold;
-}
-
-a {
-    color: unset;
     text-decoration: none;
 }
 
@@ -39,9 +35,13 @@ a {
     border: none;
     cursor: pointer;
     outline: none;
-    background: var(--colorButton);
     border-radius: 5px;
     font-weight: 500;
+    @apply bg-primary-500;
+}
+
+.button.small {
+    font-size: 1.1rem;
 }
 
 .gradientText {
