--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
 /* This creates global variables for use in other components use the React root component */ 
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Fugaz+One&family=Mogra&family=Rubik+Spray+Paint&family=Rubik:ital,wght@0,300..900;1,300..900&family=Slackey&family=Zen+Dots&display=swap');
 
 @tailwind base;
 @tailwind components;
