--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -58,7 +58,7 @@
 .hamburger span {
     height: 3px;
     width: 100%;
-    background: white;
+    background: var(--text);
     border-radius: 9px;
     opacity: 1;
     left: 0;
