💄PORT-2: Improve hover for tech icons

--- a/client/src/containers/experience/experience.css
+++ b/client/src/containers/experience/experience.css
@@ -57,5 +57,5 @@
 }
 
 .tech-icon {
-    @apply h-8 hover:cursor-pointer transition;
+    @apply h-8 hover:cursor-pointer transition-colors duration-300;
 }
