--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,15 +9,22 @@
 @tailwind utilities;
 
 @layer components {
-  .title-card {
-    background: radial-gradient(circle at top left, #009fff50 0%, rgba(42,111,219,0) 43%),
-                radial-gradient(circle at bottom right, #009fff50 0%, rgba(42,111,219,0) 43%);
-    /* transition: transform 0.4s cubic-bezier(0.075, 0.82, 0.165, 1); */
+  .title {
+    @apply mx-auto w-full max-w-5xl;
   }
 
-  /* .title-card:hover {
-    transform: scale(1.05);
-  } */
+  .title h1,
+  .title h2,
+  .title h3,
+  .title h4,
+  .title h5,
+  .title h6 {
+    @apply text-3xl md:text-5xl uppercase mb-2;
+  }
+
+  .title p {
+    @apply max-md:xs:px-4 mb-8 text-slate-400;
+  }
 
   .card {
     @apply rounded-2xl bg-primary-950 p-8;
@@ -25,7 +32,8 @@
 }
 
 :root {
-  --fontFamily: 'Poppins', sans-serif;
+  --emphasisedFontFamily: Fugaz One, Poppins, sans-serif;
+  --fontFamily: Poppins, sans-serif;
 
   --gradientText: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
   --gradientBar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
