--- a/client/src/containers/technology/technology.css
+++ b/client/src/containers/technology/technology.css
@@ -13,13 +13,14 @@
 .technology-card {
     box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.02), inset -5px -5px 20px rgba(255, 255, 255, 0.02);
     background: radial-gradient(circle at 75% 40%, var(--glowColor), transparent var(--transparentPercent));
-    transition: all 0.6s ease-in-out, --glowColor 1s ease-in-out, --transparentPercent 1s ease-in-out;
+    transition: all 0.4s ease-in-out, --glowColor 0.6s ease-in-out, --transparentPercent 0.6s ease-in-out;
     @apply relative card flex flex-row items-center gap-4 text-lg p-6 font-semibold;
 }
 
 .technology-card:hover {
     --transparentPercent: 50%;
-    /* box-shadow: inset 1px 1px 30px rgba(255, 255, 255, 0.02), inset -1px -1px 30px rgba(255, 255, 255, 0.02); */
+    transition: all 0.3s ease-in-out, --glowColor 0.3s ease-in-out, --transparentPercent 0.3s ease-in-out;
+    box-shadow: inset 1px 1px 30px rgba(255, 255, 255, 0.02), inset -1px -1px 30px rgba(255, 255, 255, 0.02);
 }
 
 @property --angle {
